srcMyCoreApp/main/default/objects/Case/fields/Cabinet__c.field-meta.xml
<CustomField>
    <fullName>Cabinet__c</fullName>
    <label>Cabinet</label>
    <length>55</length>
    <type>Text</type>
</CustomField>