srcMyCoreApp/main/default/objects/Case/fields/CS_Bool__c.field-meta.xml
<CustomField>
    <fullName>CS_Bool__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CS Bool</label>
    <type>Checkbox</type>
</CustomField>