srcMyCoreApp/main/default/objects/Case/fields/CS_email__c.field-meta.xml
<CustomField>
    <fullName>CS_email__c</fullName>
    <label>CS_email</label>
    <type>Email</type>
</CustomField>