srcMyCoreApp/main/default/objects/Case/fields/CS_URL__c.field-meta.xml
<CustomField>
    <fullName>CS_URL__c</fullName>
    <label>CS_URL</label>
    <type>Url</type>
</CustomField>