srcMyCoreApp/main/default/objects/Case/fields/File__c.field-meta.xml
<CustomField>
    <fullName>File__c</fullName>
    <label>File</label>
    <length>40</length>
    <type>Text</type>
</CustomField>