srcMyCoreApp/main/default/objects/Case/fields/SR__c.field-meta.xml
<CustomField>
    <fullName>SR__c</fullName>
    <label>SR</label>
    <length>25</length>
    <type>Text</type>
</CustomField>